--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     width: 100wh;
 	height: 90vh;
 	color: #fff;
-	background: linear-gradient(45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+    background: linear-gradient(45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
 	background-size: 400% 400%;
 	-webkit-animation: Gradient 15s ease infinite;
 	-moz-animation: Gradient 15s ease infinite;
@@ -45,4 +45,14 @@ body{
 	100% {
 		background-position: 0% 50%
 	}
+}
+
+h1{
+    text-align: center;
+    position: relative;
+    top: 70px;
+    font-size: 42px;
+    letter-spacing: 5px;
+    font-family: 'Gruppo';
+    font-weight: bold;
 }
